language/move-lang/tests/move_check/translated_ir_tests/commands/assign_wrong_type.move
// check: STLOC_TYPE_MISMATCH_ERROR

fun main() {
    let x: u64;
    x = false
}
